# retail-store-comparison

./: .env.example  .gitignore  README_API_FIELDS.md  package.json  parsed_records.json  pyproject.toml
ReadMe/: README.md
monorepo/uploader/: .env.example  Dockerfile  README.md  config.py  main.py  package.json  pnpm-lock.yaml  pyproject.toml
monorepo/uploader/src/: app.controller.ts  app.module.ts  main.ts
monorepo/uploader/src/config/: configuration.ts
monorepo/uploader/src/database/: database.module.ts  drizzle.service.ts  schema.ts
monorepo/uploader/src/database/repositories/: data.repository.interface.ts  drizzle-data.repository.ts
monorepo/uploader/src/s3/: key-generator.ts  s3.interface.ts  s3.module.ts  s3.service.ts  store-record-validator.ts
monorepo/uploader/src/storage/: key-generator.ts  minio-storage.service.ts  record-validator.ts  storage.interface.ts  storage.module.ts
monorepo/uploader/src/upload/: upload.controller.ts  upload.module.ts  upload.service.ts
monorepo/uploader/src/upload/constants/: pipeline-names.constant.ts
monorepo/uploader/src/upload/dto/: upload-records.dto.ts
monorepo/uploader/src/upload/guards/: api-key.guard.ts
monorepo/uploader/src/upload/mappers/: record-mapper.factory.ts  record-mapper.interface.ts  shufersal-record.mapper.ts
monorepo/uploader/src/upload/mappers/abstractions/prices/: parsing-helpers.ts  record-mapper.factory.ts  record-mapper.interface.ts
monorepo/uploader/src/upload/mappers/shufersal/: shufersal-record.mapper.ts
monorepo/uploader/storage/: base.py  minio_backend.py
(+70 files in other folders)
