[project]
name = "uploader"
version = "0.1.0"
description = "Retail store backend project"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0.0",
]
